--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 	<meta name="description" content="">
 	<meta name="keywords" content="">
 	<title>Bookmark merger by ZIMONH</title>
-
+	<!--by: ZIMONH src: https://github.com/zimonh/Bookmarks-Merger
+	License: https://creativecommons.org/licenses/by-nc-sa/4.0/-->
 	<link rel="stylesheet" href="style.css">
 	<script type="application/javascript" src="script.js"></script>
 </head>
